Move tests into proper folder